--- a/frontend/src/components/layout/footer/footer.module.css
+++ b/frontend/src/components/layout/footer/footer.module.css
@@ -21,7 +21,7 @@
     justify-content: center;
     align-items: flex-end;
     height: 10vh;
-    width: 100vw;
+    width: 100%;
     max-width: 3840px;
     min-height: 70px;
     margin: 0px auto 0px auto;
@@ -70,7 +70,7 @@
 .outerFooterContainer {
     box-sizing: border-box;
     background-color: var(--black);
-    width: 100vw;
+    width: 100%;
     height: 70vh;
     margin:auto;
 }
@@ -79,7 +79,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 64vw;
+    width: 64%;
     max-width: 100%;
     margin: auto;
     height: 60vh;
@@ -150,14 +150,14 @@
     justify-content: center;
     height: 5vh;
     min-height: 68px;
-    width: 100vw;
+    width: 100%;
     min-width: 269px;
     margin: auto;
     background-color: black;
 }
 .social_links {
     display: flex;
-    width: 100vw;
+    width: 100%;
     margin: auto;
     justify-content: center;
     background-color: black;
@@ -189,7 +189,6 @@
 }
 
 .copyright{
-
     font-family: Montserrat;
     font-size: .6rem;
     align-items: center;
@@ -201,7 +200,7 @@
     min-height: 12px;
     padding-top: 16px;
     padding-bottom: 20px;
-    width: 100vw;
+    width: 100%;
 }
 @media (min-width: 475px){
     .container {max-width: 475px;}}
@@ -234,7 +233,7 @@
         margin-right: 1.1rem;
     }
     .innerFooterContainer {
-        width: 80vw;
+        width: 80%;
     }
 }
 
