--- a/frontend/src/components/layout/getStarted/modal/GetStartedModal.module.css
+++ b/frontend/src/components/layout/getStarted/modal/GetStartedModal.module.css
@@ -5,8 +5,10 @@
     backdrop-filter: blur(6px);
     top: -56px;
     height: calc(100vh + 56px);
-    width: 105%;
-    right: -5vw;
+    width: 100vw;
+    left: 0%;
+    margin: 0;
+    padding: 0;
     background-color: rgb(175, 175, 175, 40%);
     justify-content: center;
     align-items: center;
