--- a/frontend/src/components/layout/header/mainNavbar.module.css
+++ b/frontend/src/components/layout/header/mainNavbar.module.css
@@ -16,9 +16,9 @@
     justify-content: center;
     align-items: center;
     height: 48px;
-    width: 95%;
+    width: 100%;
     padding: 0;
-    margin: auto;
+    margin: 0;
     color: var(--white);
 }
 
@@ -61,6 +61,7 @@
 
 .NavItem1 {
     display: flex;
+    margin-left: 2.5%;
     margin-right: auto;
     justify-content: flex-start;
 }
@@ -81,8 +82,11 @@
 .NavItem3 {
     display: flex;
     margin-left: 60px;
+    margin-right: 2.5%;
     justify-content: flex-end;
 }
+
+
 
 .avatar {
     display: flex;
